wk_taa_taaqa/src/objects/Corporate_National_Role_DTN__c.object
<CustomObject>
    <description>Corporate National Accounts Named Account Type Corporate National</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Corporate_National_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Corporate National Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Corporate_National_Role_DTN</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DTN__c</fullName>
        <description>Division Territory Number</description>
        <label>DTN</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sfdc_Custid__c</fullName>
        <label>Sfdc Custid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Corporate National Role-DTN</label>
    <nameField>
        <displayFormat>CNA-{000}</displayFormat>
        <label>Corp National Role-DTN Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Corporate National Role-DTN</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>